testsuite/tests/properties/invalid_node_builder/missing_kwarg.lkt
import common_nonempty

class Example: BaseExample {
    @lazy prop1: SynthNode = SynthNode.builder(f1=null[Literal]).build()
}
